--- a/BackEnd/Lesson_10_2023_05_25/src/main/resources/application.properties
+++ b/BackEnd/Lesson_10_2023_05_25/src/main/resources/application.properties
@@ -1,14 +1,16 @@
 springdoc.swagger-ui.path=/swagger.html
 spring.h2.console.enabled=true
 
+
+
 #spring.datasource.url=jdbc:h2:mem:mydatabase
-#spring.datasource.url=jdbc:h2:file:~/city_db1
+#spring.datasource.url=jdbc:h2:file:F:/city_db1
 #spring.datasource.driver-class-name=org.h2.Driver
 #spring.datasource.username=sa
-#spring.datasource.password=qwer
+#spring.datasource.password=0000
 
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.username=root
 spring.datasource.password=0000
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql:/localhost:33060/app
+spring.datasource.url=jdbc:mysql://localhost:3306/app
