--- a/BackEnd/APITest/build.gradle
+++ b/BackEnd/APITest/build.gradle
@@ -20,6 +20,7 @@ dependencies {
 
     implementation 'com.squareup.okhttp3:okhttp:4.9.3'
     implementation 'com.google.code.gson:gson:2.10.1'
+    testImplementation group: 'io.rest-assured', name: 'rest-assured', version: '3.0.0'
 }
 
 test {
